# Phasedos

./: .gitignore  Cargo.toml  README.md
GrapevineJS/: .mocharc.json  package.json  tsconfig.json
GrapevineJS/src/: consts.ts  index.ts  user.ts  utils.ts
GrapevineJS/types/: blake-hash.d.ts  ffjavascript.d.ts
crates/grapevine_circuits/: Cargo.toml
crates/grapevine_circuits/benches/: proof.rs
crates/grapevine_circuits/circom/: grapevine.circom  input.json  input_1.json  input_2.json  witness.wtns
crates/grapevine_circuits/circom/grapevine_js/: grapevine.wasm
crates/grapevine_circuits/src/: inputs.rs  lib.rs  nova.rs  params_gen.rs  utils.rs
crates/grapevine_cli/: .env  Cargo.toml
crates/grapevine_cli/src/: controllers.rs  http.rs  main.rs  test.rs
crates/grapevine_cli/src/tests/: helpers.rs  test.rs
crates/grapevine_common/: Cargo.toml
crates/grapevine_common/.cargo/: config.toml
crates/grapevine_common/src/: account.rs  auth_secret.rs  auth_signature.rs  crypto.rs  errors.rs  lib.rs  models.rs  utils.rs
crates/grapevine_common/src/http/: requests.rs  responses.rs
crates/grapevine_server/: Cargo.toml  circom_witness.wtns
crates/grapevine_server/src/: catchers.rs  guards.rs  main.rs  mongo.rs  utils.rs
crates/grapevine_server/src/mongo/: pipelines.rs
crates/grapevine_server/src/routes/: mod.rs  proof.rs  user.rs
crates/grapevine_server/src/tests/: auth.rs  helpers.rs  http.rs  proof.rs  user.rs
crates/grapevine_server/static/: grapevine.wasm
crates/grapevine_wasm/: Cargo.toml
crates/grapevine_wasm/src/: lib.rs  types.rs  utils.rs
crates/grapevine_wasm/tests/: test.rs
grapevine.js/: babel.config.ts  jest.config.ts  package.json  tsconfig.json
grapevine.js/src/: consts.ts  index.ts  types.ts  user.ts  utils.ts
grapevine.js/test/: grapevine.test.ts
grapevine.js/wasm/: grapevine_wasm.d.ts  grapevine_wasm.js  grapevine_wasm_bg.wasm  grapevine_wasm_bg.wasm.d.ts  package.json
scripts/: compile_wasm.sh  moving_degree_test.sh  relationship_test.sh  reveal_nullified_test.sh  sync_nullification.sh
