cargo-features = ["per-package-target"]

[package]
name = "grapevine_wasm"
version.workspace = true
edition.workspace = true
license.workspace = true
forced-target = "wasm32-unknown-unknown"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
grapevine_common.workspace = true
grapevine_circuits.workspace = true

ff_ce.workspace = true
babyjubjub-rs.workspace = true

nova-scotia = { git = "https://github.com/Mach-34/Nova-Scotia" }
nova-snark = "0.23.0"
serde = "1.0.190"
serde_json = "1.0.107"
ff = { version = "0.13", features = ["derive"] }
flate2 = "1.0.28"
hex = "0.4.3"
reqwest = { version = "0.11.23", features = ["json"] }

console_error_panic_hook = "0.1.7"
getrandom = { version = "0.2", features = ["js"]}
js-sys = "0.3"
rayon = "1.5"
serde-wasm-bindgen = "0.6.4"
wasm-bindgen = { version = "0.2.91", features = ["serde-serialize"]}
wasm-bindgen-futures = "0.4"
wasm-bindgen-rayon = { version = "1.0" }
wasm-bindgen-test = "0.3.37"
web-sys = { version = "0.3", features = ["Request", "Window", "Response"] }
num = "0.4.1"
bincode = "1.3.3"
poseidon-rs = "0.0.10"
futures = "0.3.30"

[dev-dependencies]
serde_json.workspace = true


